# g2net-gravitational-waves

./: .gitignore  README.md  pyproject.toml
data/processed/: train_subset_60k.csv
outputs/logs/: kaggle_oof_predictions_b2.csv  oof_predictions_b2.csv  training_history.json
scripts/: 00_debug_check.py  demo_kaggle_results.py  import_kaggle_logs.py  train.py  visualize.py
src/: config.py  dataset.py  model.py  utils.py
