[project]
name = "g2net-repo"
version = "0.1.0"
description = "G2Net Gravitational Wave Detection"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "matplotlib>=3.7.0",
    "nnaudio>=0.3.3",
    "numpy<2.0.0", 
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
    "seaborn>=0.12.0",
    "timm>=0.9.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "torchvision>=0.16.0",
    "tqdm>=4.66.0",
]